--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,24 +1,24 @@
 /* Based on https://gitlab.com/numenra/dotfiles/raw/9f41e4ea343c1083de06321633e0e2af5c1f65b4/sway/.config/waybar/style.css */
-@define-color foreground #f1f1f1;
-@define-color background #212121;
-@define-color cursor #f1f1f1;
+@define-color background #000000;
+@define-color foreground #aeafb0;
+@define-color cursor #aeafb0;
 
-@define-color color0  #212121;
-@define-color color1  #c30771;
-@define-color color2  #10a778;
-@define-color color3  #a89c14;
-@define-color color4  #008ec4;
-@define-color color5  #523c79;
-@define-color color6  #20a5ba;
-@define-color color7  #e0e0e0;
-@define-color color8  #212121;
-@define-color color9  #fb007a;
-@define-color color10 #5fd7af;
-@define-color color11 #f3e430;
-@define-color color12 #20bbfc;
-@define-color color13 #6855de;
-@define-color color14 #4fb8cc;
-@define-color color15 #f1f1f1;
+@define-color color0 #3d3e3d;
+@define-color color1 #755a5b;
+@define-color color2 #68755a;
+@define-color color3 #756e5a;
+@define-color color4 #5b6976;
+@define-color color5 #755b76;
+@define-color color6 #5b7674;
+@define-color color7 #808080;
+@define-color color8 #5a5b5c;
+@define-color color9 #a37679;
+@define-color color10 #87a376;
+@define-color color11 #a39b76;
+@define-color color12 #758ba3;
+@define-color color13 #9f76a3;
+@define-color color14 #75a3a1;
+@define-color color15 #aeafb0;
 
 * {
     border: none;
