wallpaper, come back to colors, add weather to waybar, change fonts, other lipstick stuff

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,147 +1,150 @@
 @import "/home/j/.cache/wal/colors-waybar.css";
 
 * {
-    border: none;
-    border-radius: 0;
-    font-family: "Manrope", "Ubuntu Condensed", Roboto, Helvetica, Arial, sans-serif;
-    font-size: 11pt;
-    min-height: 22pt;
-    padding-left: 4pt;
-    padding-right: 6pt;
+	border: none;
+	border-radius: 0;
+	font-family: "PT Sans", sans-serif;
+	font-size: 11pt;
+	min-height: 22pt;
+	padding-left: 4pt;
+	padding-right: 6pt;
 }
 
 window#waybar {
-    background: transparent;
-    color: @foreground;
+	background: transparent;
+	color: @foreground;
 }
 
 #workspaces button {
-    padding: 0;
-    background: transparent;
-    color: @foreground;
-    border-bottom: 3px solid transparent;
+	padding: 0;
+	background: transparent;
+	color: @foreground;
+	border-bottom: 3px solid transparent;
 }
 
 #workspaces button.focused {
-    background: transparent;
-    border-bottom: 3px solid @color15;
+	background: transparent;
+	border-bottom: 3px solid @color15;
 }
 
 #mode {
-    background: transparent;
-    border-bottom: 3px solid @color15;
+	background: transparent;
+	border-bottom: 3px solid @color15;
 }
 
-#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray, #mode, #custom-temp, #custom-root, #custom-home, #custom-backup, #custom-scratch, #custom-main {
-    padding: 0 6px;
-    margin: 0 3px;
+#clock, #battery, #cpu, #memory, #network, #pulseaudio, #custom-spotify, #tray,
+#mode, #custom-temp, #custom-root, #custom-home, #custom-backup,
+#custom-scratch, #custom-main, #custom-weather
+{
+	padding: 0 6px;
+	margin: 0 3px;
 }
 
 #clock {
-    background-color: transparent;
-    border-bottom: 3px solid @color1;
-    color: @foreground;
+	background-color: transparent;
+	border-bottom: 3px solid @color1;
+	color: @foreground;
 }
 
 #battery {
-    background: transparent;
-    border-bottom: 3px solid @color16;
-    color: @foreground
+	background: transparent;
+	border-bottom: 3px solid @color16;
+	color: @foreground
 }
 
 #battery.charging {
-    background: transparent;
-    border-bottom: 3px solid @color1;
-    color: @foreground
+	background: transparent;
+	border-bottom: 3px solid @color1;
+	color: @foreground
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: black;
-    }
+	to {
+		background-color: #ffffff;
+		color: black;
+	}
 }
 
 #battery.warning:not(.charging) {
-    background: #f53c3c;
-    color: white;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+	background: #f53c3c;
+	color: white;
+	animation-name: blink;
+	animation-duration: 0.5s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
 }
 
 #cpu {
-    background: transparent;
-    border-bottom: 3px solid @color5;
-    color: @foreground;
+	background: transparent;
+	border-bottom: 3px solid @color5;
+	color: @foreground;
 }
 
 #memory {
-    background: transparent;
-    border-bottom: 3px solid @color7;
-    color: @foreground;
+	background: transparent;
+	border-bottom: 3px solid @color7;
+	color: @foreground;
 }
 
 #network {
-    background: transparent;
-    border-bottom: 3px solid @color16;
-    color: @foreground
+	background: transparent;
+	border-bottom: 3px solid @color16;
+	color: @foreground
 }
 
 #network.disconnected {
-    background: transparent;
-    color: crimson;
+	background: transparent;
+	color: crimson;
 }
 
 #pulseaudio {
-    background: transparent;
-    border-bottom: 3px solid @color15;
-    color: @foreground;
+	background: transparent;
+	border-bottom: 3px solid @color15;
+	color: @foreground;
 }
 
 #pulseaudio.muted {
-    background: #90b1b1;
-    color: #2a5c45;
+	background: #90b1b1;
+	color: #2a5c45;
 }
 
 #custom-spotify {
-    background: #66cc99;
-    color: #2a5c45;
+	background: #66cc99;
+	color: #2a5c45;
 }
 
 #tray {
-    background-color: transparent;
-    border-bottom: 3px solid @color15;
+	background-color: transparent;
+	border-bottom: 3px solid @color15;
 }
 
 #custom-root {
-    background: transparent;
-    border-bottom: 4px solid @color9;
+	background: transparent;
+	border-bottom: 4px solid @color9;
 }
 
 #custom-temp {
-    background: transparent;
-    border-bottom: 3px solid @color5;
+	background: transparent;
+	border-bottom: 3px solid @color5;
 }
 
 #custom-home {
-    background: transparent;
-    border-bottom: 4px solid @color9;
+	background: transparent;
+	border-bottom: 4px solid @color9;
 }
 
-#custom-main {
-    background: transparent;
-    border-bottom: 3px solid @color10;
+#custom-main, #custom-weather {
+	background: transparent;
+	border-bottom: 3px solid @color10;
 }
 
 #custom-backup {
-    background: transparent;
-    border-bottom: 3px solid @color10;
+	background: transparent;
+	border-bottom: 3px solid @color10;
 }
 
 #custom-scratch {
-    background: transparent;
-    border-bottom: 3px solid @color11;
+	background: transparent;
+	border-bottom: 3px solid @color11;
 }
