waybar: Background color for modules still lacking one.

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -45,6 +45,8 @@ window#waybar {
 #wireplumber,
 #network,
 #memory,
+#mpris,
+#window,
 #tray {
 	background-color: @bg-dark;
 	padding: 0.25em 0.5em;
